--- a/DigiHub/index.html
+++ b/DigiHub/index.html
@@ -57,7 +57,7 @@
         <img src="assets/mesh.png" alt="Mesh photo" />
         <div class="content-top-texts">
           <h1>Welcome to <span>DigiHub</span></h1>
-          <p>Thank you for visiting my store - feel free to browse around.</p>
+          <p>Thank you for visiting our store - feel free to browse around.</p>
           <p>
             Explore new digital products and see what we have launched recently.
           </p>
